<resources>
    <string name="app_name">Deaf Speak</string>

    <string name="exit_app_str">Press Again to Exit</string>

    <string name="rationale_init">APP Needs some Permission</string>
    <string name="permissions_denied_content_str">Permission Denied \nOpen Setting to Modify APP Permission</string>
    <string name="need_permissions_str">Permission Required</string>

    <string name="loading_tips">Loading…</string>

    <string name="action_confirm">Confirm</string>

    <string name="copy_success">Copy Success</string>

    <!--login-->
    <string name="login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>

    <!--main-->
    <string name="games">Games</string>
    <string name="jump_for_fun">Jump for Fun</string>
    <string name="cube_hub">Cube-Hub</string>
    <string name="past_records">Past Records</string>
    <string name="check_in_sentence_1">You have checked in</string>
    <string name="check_in_sentence_2">REGULARLY</string>
    <string name="check_in_sentence_3">today</string>
    <string name="not_check_in_sentence_1">You have</string>
    <string name="not_check_in_sentence_2">NOT</string>
    <string name="not_check_in_sentence_3">checked in</string>
    <string name="not_check_in_sentence_4">today.</string>
    <string name="not_check_in_sentence_5">CHEER UP!</string>
    <string name="daily_progress">Daily Progress</string>
    <string name="daily_tasks">Daily Tasks</string>

    <!--section-->
    <string name="tutorial">Tutorial</string>
    <string name="mouth_interaction">3D Mouth Interaction</string>
    <string name="pronunciation_exercise">Pronunciation Exercise</string>
    <string name="mouth_shape_exercise">Mouth Shape Exercise</string>

    <!--speech-->
    <string name="standard_pronunciation">Standard Pronunciation</string>
    <string name="test_pronunciation">Test Pronunciation</string>
    <string name="difference_line">Difference Line</string>
    <string name="standard_line">Standard Line</string>
    <string name="test_line">Test Line</string>
    <string name="split_line">Split Line</string>
    <string name="base_line">Base Line</string>

    <!--mouth-->
    <string name="mouth_out_of_bounds">Please put your mouth in the green square area</string>
    <string name="no_warning">No warning! Excellent!</string>

    <!--menu-->
    <string name="score_panel">Score Panel</string>
    <string name="physical_game">Physical Game</string>
    <string name="start">Start</string>

    <!--game-->
    <string name="scores">scores:</string>
    <string name="ready">Ready</string>
    <string name="start_time">00:30</string>
    <string name="end_time">00:00</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
</resources>