<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.common.ui.viewmodel.LeaderboardViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                android:textSize="@dimen/sp_20"
                android:gravity="center"
                android:background="@drawable/bg_header_left_round"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/balonku_regular"
                android:text="@string/rank"/>

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                android:textSize="@dimen/sp_20"
                android:gravity="center"
                android:background="@color/FFDFD7D7"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/balonku_regular"
                android:text="@string/name"/>

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/dp_10"
                android:paddingBottom="@dimen/dp_10"
                android:paddingStart="@dimen/dp_10"
                android:paddingEnd="@dimen/dp_10"
                android:textSize="@dimen/sp_20"
                android:gravity="center"
                android:background="@drawable/bg_header_right_round"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/balonku_regular"
                android:text="@string/score"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</layout>