<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.example.common.ui.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.activity.LoginActivity">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_32"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_30"
            android:textStyle="bold"
            android:fontFamily="@font/balonku_regular"/>

        <ImageView
            android:id="@+id/iv_username"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_24"
            android:src="@drawable/ic_username"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_username"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_toEndOf="@+id/iv_username"
            android:background="@android:color/transparent"
            android:fontFamily="@font/balonku_regular"
            android:letterSpacing="0.05"
            android:hint="@string/prompt_username"
            android:textCursorDrawable="@drawable/et_cursor"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/v_line1"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:background="@color/FFDADAD8"
            android:layout_below="@+id/iv_username"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"/>

        <ImageView
            android:id="@+id/iv_password"
            android:layout_below="@+id/v_line1"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_24"
            android:src="@drawable/ic_password"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/iv_password"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/dp_24"
            android:layout_toEndOf="@+id/iv_password"
            android:background="@android:color/transparent"
            android:letterSpacing="0.05"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/et_cursor"
            android:textStyle="bold"
            android:fontFamily="@font/balonku_regular"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/v_line2"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginEnd="@dimen/dp_24"
            android:background="@color/FFDADAD8"
            android:layout_below="@+id/iv_password"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_2"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_below="@+id/v_line2"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_24"
            android:background="@drawable/bg_btn_unable_round"
            android:stateListAnimator="@null"
            android:text="@string/action_sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20"
            android:letterSpacing="0.05"
            android:textStyle="bold"
            android:fontFamily="@font/balonku_regular"
            android:shadowColor="@color/light_gary"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"/>

    </RelativeLayout>

</layout>